# Personal-OS

./: .env.example  .gitignore  .vercelignore  README.md  netlify.toml  setup.bat  setup.sh
.github/workflows/: release.yml
backend/: backend.spec  pyproject.toml  run.py
backend/app/: __init__.py  config.py  db.py  main.py  scheduler.py
backend/app/models/: __init__.py  account.py  budget.py  finance.py  finance_category.py  notification.py  setting.py  sms_transaction.py  subscription.py
backend/app/routers/: accounts.py  ai.py  data.py  finance.py  import_router.py  journal.py  notifications.py  settings.py  sms.py  subscription.py
backend/app/schemas/: account.py  budget.py  finance.py  finance_category.py  journal.py  setting.py  subscription.py
backend/app/services/: csv_parser.py  habit_insights.py  llm_client.py  notification_service.py  report_generator.py  seed.py  sms_parser.py  transaction_categorizer.py
docs/: GETTING-STARTED.md
electron/: main.js  package.json  preload.js
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: FloatingChat.tsx  LockScreen.tsx  NotificationPanel.tsx  PageHeader.tsx  Sidebar.tsx  Topbar.tsx
frontend/src/contexts/: AIContentContext.tsx  BriefingContext.tsx  ModulesContext.tsx
frontend/src/lib/: api.ts  (+2 more)
license-server/: .env.example  .gitignore  requirements.txt
license-server/admin_ui/: index.html
license-server/app/: database.py  main.py  models.py
scripts/: backup.py  init-git.bat  init-git.sh  start.bat  start.sh
(+60 files in other folders)
