[project]
name = "north-os-backend"
version = "0.1.0"
description = "Local-first personal OS — backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "python-multipart>=0.0.12",
    "apscheduler>=3.10.4",
    "pandas>=2.2.3",
    "sqlite-vec>=0.1.6",
    "fpdf2>=2.7.9",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
# Install with: pip install -e "backend[encryption]"
# On Mac ARM you may also need: brew install sqlcipher
# sqlcipher3-binary ships prebuilt wheels only for specific Python versions —
# if pip can't find one, either pin Python to 3.11 or install sqlcipher3
# (source) against brew's sqlcipher lib.
encryption = [
    "sqlcipher3-binary>=0.5.4; sys_platform != 'win32'",
]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
